test/analysis/flowanalysis/rec_fun-1.good
rec_fun-1.chpl:2: error: unable to resolve return type of function 'f'
rec_fun-1.chpl:2: In function 'f':
rec_fun-1.chpl:5: error: called recursively at this point
  rec_fun-1.chpl:8: called as f(x: int(64))
